Changed pid temp files to use 'java.io' features + changed startScripts to enable several instances of MZmine. (Unique instance ID - gets rid of MZmine closing instance to interfere with temp files of the still running ones).
Former-commit-id: 55d8cece060e9e0bf2a13200fa98c78bd351a0f0